force-app-metadata-removed/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <label>Risk</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>