force-app-metadata-removed/main/default/objects/Risk__c/fields/Actions_Taken_Date__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken_Date__c</fullName>
    <label>Actions Taken Date</label>
    <type>DateTime</type>
</CustomField>