force-app-metadata-removed/main/default/objects/Risk__c/fields/Date_of_Manager_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Manager_Sign_Off__c</fullName>
    <label>Date of Manager Sign Off</label>
    <type>Date</type>
</CustomField>