force-app-metadata-removed/main/default/objects/Risk__c/fields/EAP_ID__c.field-meta.xml
<CustomField>
    <fullName>EAP_ID__c</fullName>
    <externalId>true</externalId>
    <label>EAP ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>