force-app-metadata-removed/main/default/objects/Risk__c/fields/Nature_of_Risk_and_Severity__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Risk_and_Severity__c</fullName>
    <label>Nature of Risk and Severity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>