force-app-metadata-removed/main/default/objects/Risk__c/fields/Reviewing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reviewing_Comments__c</fullName>
    <label>Reviewing Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>