force-app-metadata-removed/main/default/objects/Risk__c/fields/Reviewing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reviewing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewing Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>This user does not have authority to sign off risk</errorMessage>
        <filterItems>
            <field>$User.Can_Sign_Off_Risk__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>