force-app-metadata-removed/main/default/objects/Risk__c/fields/Risk_Rating_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_Agreed__c</fullName>
    <label>Risk Rating Agreed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>No Risk Identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>