force-app-metadata-removed/main/default/objects/Risk__c/fields/Risk_Rating_Prior_to_Review__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_Prior_to_Review__c</fullName>
    <label>Risk Rating Before Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>