force-app-metadata-removed/main/default/objects/Risk__c/validationRules/Actions_Complete_before_date_raised.validationRule-meta.xml
<ValidationRule>
    <fullName>Actions_Complete_before_date_raised</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
RecordType.Name = &quot;Clinical Risk&quot;,
RecordType.Name = &quot;Child Protection&quot;,
RecordType.Name = &quot;Vulnerable Adult&quot;
),
 Date_of_Manager_Sign_Off__c  &lt; Date_Raised__c 
)</errorConditionFormula>
    <errorDisplayField>Date_of_Manager_Sign_Off__c</errorDisplayField>
    <errorMessage>Actions complete cannot be before the date raised</errorMessage>
</ValidationRule>