force-app-metadata-removed/main/default/objects/Risk__c/validationRules/Closed_Case_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Case_Val</fullName>
    <active>true</active>
    <description>Ensures risk cannot be created aganist a closed case</description>
    <errorConditionFormula>Case__r.IsClosed &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>You cannot create risk against a closed case</errorMessage>
</ValidationRule>