force-app-metadata-removed/main/default/objects/Risk__c/validationRules/Manager_Approval_Needed_to_Close_Risk.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_Approval_Needed_to_Close_Risk</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK( Date_of_Manager_Sign_Off__c )),
ISBLANK(  Manager_Sign_Off_at_EOC_Closure__c  )
)</errorConditionFormula>
    <errorDisplayField>Reviewing_Manager__c</errorDisplayField>
    <errorMessage>The name of the Manager signing of the risk must be recorded to save the record</errorMessage>
</ValidationRule>