force-app-metadata-removed/main/default/objects/Risk__c/validationRules/Manager_Signoff_req_risk_rating_agreed.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_Signoff_req_risk_rating_agreed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Manager_Sign_Off_at_EOC_Closure__c )),
ISBLANK(TEXT( Risk_Rating_Agreed__c ))
)</errorConditionFormula>
    <errorMessage>Risk Rating Agreed must be populated before Manager Sign-off is populated</errorMessage>
</ValidationRule>