force-app-metadata-removed/main/default/objects/Risk__c/validationRules/reviewing_comments_date_set.validationRule-meta.xml
<ValidationRule>
    <fullName>reviewing_comments_date_set</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(  Date_Time_of_Review__c )) , ISBLANK( Reviewing_Comments__c ))</errorConditionFormula>
    <errorMessage>Reviewing Comments must be entered</errorMessage>
</ValidationRule>